test/files/neg/macro-bundle-wrongcontext-b.check
macro-bundle-wrongcontext-b.scala:10: error: macro bundles must be concrete monomorphic classes having a single constructor with a `val c: Context` parameter
  def foo: Any = macro Bundle.impl
                       ^
one error found
